--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bridge",
+  "name": "websocket-server",
+  "type": "module",
   "version": "1.0.0",
-  "description": "dynamo cloud extension coordinator",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,12 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "bufferutil": "3.0.3",
-    "express": "^4.16.3",
-    "npm": "^5.7.1",
-    "reconnecting-websocket": "^3.2.2",
-    "utf-8-validate": "4.0.0",
-    "ws": "5.0.0"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2",
+    "ws": "^8.8.0"
   }
 }
